# breadflowerdos

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-bf2.yaml  format-check.yaml
src/: Core_System.cpp  Core_System.hpp  Game_Main_demo.cpp  Game_Main_demo.hpp  Main.cpp
src/dice/hfe/: ActionBuffer.hpp  BF2.cpp  BF2.hpp  BF2Console.hpp  BF2Engine.cpp  BF2Engine.hpp  BF2EngineSetup.cpp  BF2EngineSetup.hpp  BF2Log.cpp  BF2Log.hpp  ClassManager.cpp  ClassManager.hpp  ClassRegInfo.hpp  ClientConnection.hpp  Debug.hpp  Demo.cpp  Demo.hpp  EventCategory.hpp  EventManager.cpp  EventManager.hpp  EventNode.hpp  Game.cpp  Game.hpp  GameServer.cpp  GameServer.hpp  Hash.hpp  IAllocator.hpp  IBase.hpp  IClassManager.hpp  IClassServer.hpp  IClientConnection.hpp  IConsoleSaveable.hpp  IEventListener.hpp  IEventManager.hpp  IGame.hpp  IGameClient.hpp  IGameLogic.hpp  IGameServer.hpp  IMemoryPool.hpp  IModule.hpp  (+49 more)
src/dice/hfe/Demo/: Demo.cpp  Demo.hpp
src/dice/hfe/geom/: IGeometry.hpp
src/dice/hfe/io/: Console.cpp  Console.hpp  FileAccess.hpp  FileChangeManager.cpp  FileChangeManager.hpp  FileManager.cpp  FileManager.hpp  FileMode.hpp  FileModule.cpp  FileModule.hpp  FileResolveMode.hpp  IDirectoryChangeListener.hpp  IFileChangeManager.hpp  IFileManager.hpp  IFileSystem.hpp  IInputFilter.hpp  INetworkable.hpp  INetworkableInfo.hpp  IStream.hpp  ModuleIO.cpp  ModuleIO.hpp  NetworkManager.cpp  NetworkManager.hpp  NetworkModule.cpp  NetworkModule.hpp  NetworkableBase.hpp  NetworkableDescriptor.hpp  NetworkableStateMask.hpp  OldConsole.cpp  OldConsole.hpp  PlayerAction.hpp  PlayerInput.hpp  SettingsManagerBase.cpp  SettingsManagerBase.hpp  io.cpp  io.hpp
src/dice/hfe/tool/: ModuleToolObject.cpp  ModuleToolObject.hpp
src/dice/hfe/world/: GameLogicCompModule.cpp  GameLogicCompModule.hpp  IObject.hpp  IObjectTemplate.hpp  IPlayer.hpp  IPlayerManager.hpp  Module.cpp  Module.hpp  ObjTemplBaseModule.cpp  ObjTemplBaseModule.hpp  ObjTemplPortalModule.cpp  ObjTemplPortalModule.hpp  Object.hpp  ObjectModule.cpp  ObjectModule.hpp  ObjectTemplate.hpp  PhysicsModule.cpp  PhysicsModule.hpp  Player.hpp  PlayerManager.cpp  PlayerManager.hpp  SimpleObject.hpp
